// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`test harness records snapshot approvals 1`] = `
"module Example {
  val answer = 42
}"
`;

exports[`formatter formats an empty module 1`] = `
"module Example {
}
"
`;
